--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,9 @@ multi_line_output = 3
 
 # Ignore pytest warnings here
 [tool.pytest.ini_options]
-filterwarnings = []
+filterwarnings = [
+    "ignore:.*The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.(duration|unit)`` is deprecated as of qiskit 1.3.0.*",
+]
 
 [tool.ruff]
 exclude = ["notebooks/"]
