--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
       # Run the linter.
       - id: ruff
         types_or: [python, pyi, jupyter]
-        args: [--fix, --ignore=E741]
+        args: [--fix, --config=pyproject.toml]
       # Run the formatter.
       - id: ruff-format
         types_or: [python, pyi, jupyter]
