--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ qiskit-ibm-runtime = "^0.34.0"
 qiskit-aer = "^0.15.1"
 cotengra = "^0.6.2"
 kahypar = "^1.3.5"
-block2 = "^0.5.3"
+block2 = {version = "0.5.3rc18", source = "block2"}
 symmer = "^0.0.7"
 scipy = "~1.9.3"
 numpy = "^1.18.5"
@@ -32,6 +32,14 @@ pytest = "^7.2.2"
 coverage = "^7.6.9"
 pyscf = "^2.7.0"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+[[tool.poetry.source]]
+name = "block2"
+url = "https://block-hczhai.github.io/block2-preview/pypi/"
+priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
