--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ pre-commit = "^4.0.1"
 pydocstyle = "^6.3.0"
 pytest = "^7.2.2"
 coverage = "^7.6.9"
-pyscf = "^2.7.0"
+cotengrust = "^0.1.4"
 
 [[tool.poetry.source]]
 name = "PyPI"
