--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ qiskit-ibm-runtime = "^0.34.0"
 qiskit-aer = "^0.15.1"
 cotengra = "^0.6.2"
 kahypar = "^1.3.5"
-block2 = {version = "0.5.3rc18", source = "block2"}
+block2 = "^0.5.3"
 symmer = "^0.0.7"
 scipy = "~1.9.3"
 numpy = "^1.18.5"
@@ -49,6 +49,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 filterwarnings = [
     "ignore:.*The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.(duration|unit)`` is deprecated as of qiskit 1.3.0.*",
+    "ignore:.*Couldn't import `kahypar` - skipping from default hyper optimizer and using basic `labels` method instead.*",
 ]
 
 [tool.ruff]
