--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,9 @@ kahypar = [
     {version = "^1.3.5", platform = "darwin"},
     {version = "^1.3.5", platform = "linux"}
 ]
-symmer = "^0.0.7"
-scipy = "~1.9.3"
-numpy = "^1.18.5"
+symmer = "^0.0.9"
+scipy = "^1.15.0"
+numpy = "^2.1"
 ruff = "^0.8.2"
 black = "^24.10.0"
 isort = "^5.13.2"
