--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ pytest = "^7.2.2"
 coverage = "^7.6.9"
 cotengrust = "^0.1.4"
 matplotlib = "^3.10.1"
+sphinx = "^5.3.0"
+myst-parser = "^0.18.1"
 
 [[tool.poetry.source]]
 name = "PyPI"
