--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,20 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10, <3.12"
+python = ">=3.11, <3.12"
 sparse = "^0.15.4"
 qiskit = "^1.3.0"
 qiskit-ibm-runtime = "^0.34.0"
 qiskit-aer = "^0.15.1"
 cotengra = "^0.6.2"
-kahypar = "^1.3.5"
-block2 = "^0.5.3"
-symmer = "^0.0.7"
-scipy = "~1.9.3"
-numpy = "^1.18.5"
+block2 = {version = "0.5.3rc18", source = "block2"}
+kahypar = [
+    {version = "^1.3.5", platform = "darwin"},
+    {version = "^1.3.5", platform = "linux"}
+]
+symmer = "^0.0.9"
+scipy = "^1.15.0"
+numpy = "^2.1"
 ruff = "^0.8.2"
 black = "^24.10.0"
 isort = "^5.13.2"
