--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ symmer = "^0.0.9"
 scipy = "^1.15.0"
 numpy = "^2.1"
 ruff = "^0.8.2"
-black = "^24.10.0"
+black = ">=24.10.0"
 isort = "^5.13.2"
 mypy = "^1.13.0"
 poetry = "^1.8.5"
