--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ qiskit = "^1.3.0"
 qiskit-ibm-runtime = "^0.34.0"
 qiskit-aer = "^0.15.1"
 cotengra = "^0.6.2"
-block2 = {version = "0.5.3rc18", source = "block2"}
 kahypar = [
     {version = "^1.3.5", platform = "darwin"},
     {version = "^1.3.5", platform = "linux"}
@@ -25,7 +24,7 @@ symmer = "^0.0.9"
 scipy = "^1.15.0"
 numpy = "^2.1"
 ruff = "^0.8.2"
-black = ">=24.10.0"
+black = "^24.10.0"
 isort = "^5.13.2"
 mypy = "^1.13.0"
 poetry = "^1.8.5"
@@ -42,11 +41,6 @@ cached-property = "^1.5.2"
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
-
-[[tool.poetry.source]]
-name = "block2"
-url = "https://block-hczhai.github.io/block2-preview/pypi/"
-priority = "supplemental"
 
 
 [tool.poetry.group.dev.dependencies]
