--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,32 +11,21 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4"
-sparse = "^0.15.4"
-qiskit = "^1.3.0"
-qiskit-ibm-runtime = "^0.34.0"
-qiskit-aer = "^0.15.1"
-cotengra = "^0.6.2"
+sparse = "^0.15.4, <0.16"
+qiskit = ">=1.3.0"
+qiskit-ibm-runtime = ">=0.34.0"
+qiskit-aer = ">=0.15.1"
+cotengra = ">=0.6.2"
 kahypar = [
     {version = "^1.3.5", platform = "darwin"},
     {version = "^1.3.5", platform = "linux"}
 ]
-symmer = "^0.0.9"
-scipy = "^1.15.0"
-numpy = "^2.1"
-ruff = "^0.8.2"
-black = "^24.10.0"
-isort = "^5.13.2"
-mypy = "^1.13.0"
-poetry = "^1.8.5"
-pre-commit = "^4.0.1"
-pydocstyle = "^6.3.0"
-pytest = "^7.2.2"
-coverage = "^7.6.9"
-cotengrust = "^0.1.4"
-matplotlib = "^3.10.1"
-sphinx = "^5.3.0"
-myst-parser = "^0.18.1"
-cached-property = "^1.5.2"
+symmer = ">=0.0.9"
+scipy = ">=1.15.0, <2"
+numpy = ">=2.1, <3"
+cotengrust = ">=0.1.4"
+matplotlib = ">=3.10.1"
+cached-property = ">=1.5.2"
 
 [[tool.poetry.source]]
 name = "PyPI"
@@ -44,8 +33,19 @@ priority = "primary"
 
 
 [tool.poetry.group.dev.dependencies]
+coverage = "^7.6.9"
 ipykernel = "^6.29.5"
 pyscf = "^2.8.0"
+ruff = ">=0.8.2"
+black = ">=24.10.0"
+isort = ">=5.13.2"
+mypy = ">=1.13.0"
+poetry = "^1.8.5"
+pre-commit = "^4.0.1"
+pydocstyle = "^6.3.0"
+pytest = "^7.2.2"
+sphinx = "^5.3.0"
+myst-parser = "^0.18.1"
 
 [build-system]
 requires = ["poetry-core"]
